# test

./: .travis.yml  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  entrypoint.sh  generate.sh  index.html  test.cpp  test.h  test_check.sh
.github/workflows/: main.yml
doxygen/: annotated.html  asr__interface_8hh.html  asr__interface_8hh__incl.map  asr__interface_8hh_source.html  audio__player__interface_8hh.html  audio__player__interface_8hh__incl.map  audio__player__interface_8hh_source.html  capability_8hh.html  capability_8hh__incl.map  capability_8hh_source.html  capability__factory_8hh.html  capability__factory_8hh__incl.map  capability__factory_8hh_source.html  capability__helper__interface_8hh.html  capability__helper__interface_8hh__dep__incl.map  capability__helper__interface_8hh__dep__incl.md5  capability__helper__interface_8hh__incl.map  capability__helper__interface_8hh_source.html  capability__interface_8hh.html  capability__interface_8hh__dep__incl.map  capability__interface_8hh__dep__incl.md5  capability__interface_8hh__incl.map  capability__interface_8hh_source.html  classNuguCapability_1_1CapabilityFactory-members.html  classNuguCapability_1_1CapabilityFactory.html  classNuguCapability_1_1IASRHandler-members.html  classNuguCapability_1_1IASRHandler.html  classNuguCapability_1_1IASRHandler.js  classNuguCapability_1_1IASRListener-members.html  classNuguCapability_1_1IASRListener.html  classNuguCapability_1_1IAudioPlayerHandler-members.html  classNuguCapability_1_1IAudioPlayerHandler.html  classNuguCapability_1_1IAudioPlayerHandler__coll__graph.map  classNuguCapability_1_1IAudioPlayerListener-members.html  classNuguCapability_1_1IAudioPlayerListener.html  classNuguCapability_1_1IAudioPlayerListener__coll__graph.map  classNuguCapability_1_1IMicHandler-members.html  classNuguCapability_1_1IMicHandler.html  classNuguCapability_1_1IMicListener-members.html  classNuguCapability_1_1IMicListener.html  (+326 more)
doxygen/search/: all_0.js  all_2.js  all_6.js  all_8.js  all_b.js  all_c.js  all_e.js  all_f.js  functions_0.js  functions_5.js  functions_7.js  functions_b.js  functions_d.js  functions_e.js
ubuntu/dists/bionic/pool/: libnugu-dbg_0.6.0ubuntu2020032476f6d1c.bionic_amd64.deb  libnugu-dbg_0.6.0ubuntu2020032476f6d1c.bionic_arm64.deb  libnugu-dbg_0.6.0ubuntu2020032476f6d1c.bionic_armhf.deb  libnugu-dev_0.6.0ubuntu2020032476f6d1c.bionic_amd64.deb  libnugu-dev_0.6.0ubuntu2020032476f6d1c.bionic_arm64.deb  libnugu-dev_0.6.0ubuntu2020032476f6d1c.bionic_armhf.deb  libnugu-examples_0.6.0ubuntu2020032476f6d1c.bionic_amd64.deb  libnugu-examples_0.6.0ubuntu2020032476f6d1c.bionic_arm64.deb  libnugu-examples_0.6.0ubuntu2020032476f6d1c.bionic_armhf.deb  libnugu-plugins-default_0.6.0ubuntu2020032476f6d1c.bionic_amd64.deb  libnugu-plugins-default_0.6.0ubuntu2020032476f6d1c.bionic_arm64.deb  libnugu-plugins-default_0.6.0ubuntu2020032476f6d1c.bionic_armhf.deb  (+3 more)
(+21 files in other folders)
